Fixed top header alignment

--- a/style.css
+++ b/style.css
@@ -1,27 +1,33 @@
 body {
     margin: 0;
-    display: flex;
-    flex-direction: column;
 }
 
 .header {
     background-color: #1F2937;
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
 }
 
 
 .top {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+}
+
+.mid {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    flex: auto;
 }
 
 .header-link {
     display: flex;
+    gap: 10px;
+    margin: 10px;
     align-items: center;
-    justify-content: flex-end;
 }
 
 h2, h1, p, a {
